Fix services header on mobile.

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -657,6 +657,10 @@ a {
     }
   }
 
+  .services-header {
+    margin-top: 0;
+    padding-top: 12px;
+  }
   .ham-menu {
     display: block !important;
   }
